--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       background: linear-gradient(
         rgba(0,0,0,0.55),
         rgba(0,0,0,0.35)
-      ), url('img/p_fondo.jpg');
+      ), url('img/p_fondo.png');
       background-size: cover;
       background-position: center;
     }
@@ -1533,7 +1533,7 @@
 
       <!-- SERVICIO 1 -->
       <div class="servicio-card">
-        <img src="img/tarjeta1.jpeg" alt="Vuelos de inducción" class="servicio-img">
+        <img src="img/tarjeta1.png" alt="Vuelos de inducción" class="servicio-img">
         <div class="servicio-icono">
           <svg viewBox="0 0 24 24" fill="none">
             <path d="M2 19L22 12 2 5l4 4-4 4z" stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
@@ -1603,8 +1603,8 @@
 <div id="modal1" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <img src="img/tarjeta1.jpeg" alt="Vuelos de inducción">
-    <h3>Vuelos de Inducción</h3>
+    <img src="img/tarjeta1.png" alt="Vuelos de inducción">
+    <h3>Inducción al Vuelo/Piloto por un día.</h3>
     <p>
       Primer acercamiento a la Aviación Deportiva & Recreativa Certificada,con vuelos de 15 a 60 min,paquetes familiares y experiencias personalizadas.
       <br><strong>Puntos destacados:</strong> Mosaico de Cultivos, Río Cauca, Humedales cercanos.
@@ -1670,7 +1670,7 @@
 
       <!-- Plan 1 -->
       <div class="plan-card p-6 bg-gray-800 rounded-xl visible">
-        <img src="img/valle_del_cauca.jpg" alt="Plan Corazón del Valle" class="rounded-xl mb-4">
+        <img src="img/valle_del_cauca.png" alt="Plan Corazón del Valle" class="rounded-xl mb-4">
         <h3>🌿 Corazón del Valle</h3>
         <ul class="icon-list">
           <li><i class="fas fa-clock"></i> Duración: Desde 30 min en adelante.</li>
@@ -1723,7 +1723,7 @@
 <div id="modalPlan1" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <img src="img/plan1.jpeg" alt="Plan Corazón del Valle" class="rounded-xl mb-4">
+    <img src="img/valle_del_cauca.png" alt="Plan Corazón del Valle" class="rounded-xl mb-4">
     <h3>🌿 Corazón del Valle</h3>
     <p>
       Vuelo panorámico desde 30 minutos en adelante, ideal para principiantes o quienes buscan un paseo rápido.  
@@ -1750,7 +1750,7 @@
 <div id="modalPlan2" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <img src="img/plan2.jpeg" alt="Plan Historias y Cúpulas" class="rounded-xl mb-4">
+    <img src="img/basilica_hacienda.png" alt="Plan Historias y Cúpulas" class="rounded-xl mb-4">
     <h3>✨ Ruta Histórica</h3>
     <p>
       Vuelo cultural desde 45 minutos en adelante, pensado para quienes desean combinar vuelo con apreciación histórica y arquitectónica.  
@@ -1776,7 +1776,7 @@
 <div id="modalPlan3" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <img src="img/plan3.jpeg" alt="Plan Premium Cumbres y Agua" class="rounded-xl mb-4">
+    <img src="img/mix_r_l_v.png" alt="Plan Premium Cumbres y Agua" class="rounded-xl mb-4">
     <h3>⛰️ Premium – Cumbres y Agua</h3>
     <p>
       Vuelo extendido de 90 minutos o más, para entusiastas o celebraciones especiales, ofreciendo vistas completas del Valle y sus contrastes geográficos.  
@@ -1844,7 +1844,7 @@
 
     <!-- IMAGEN -->
     <div class="sobre-nosotros-media">
-      <img src="img/servicio1.jpeg" alt="Sobre Nosotros">
+      <img src="img/servicio1.png" alt="Sobre Nosotros">
     </div>
 
   </div>
@@ -1868,7 +1868,7 @@
       
       <!-- Imagen -->
       <div class="galeria-item" style="overflow:hidden; border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
-        <img src="galeria/img/1.jpeg" alt="Vuelo 1" style="width:100%; height:250px; object-fit:cover; transition: transform 0.3s;">
+        <img src="galeria/img/1.png" alt="Vuelo 1" style="width:100%; height:250px; object-fit:cover; transition: transform 0.3s;">
       </div>
       
       <!-- Video -->
@@ -1907,7 +1907,7 @@
 
       <!-- Imagen -->
       <div class="galeria-item" style="overflow:hidden; border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
-        <img src="galeria/img/4.jpeg" alt="Vuelo 2" style="width:100%; height:250px; object-fit:cover; transition: transform 0.3s;">
+        <img src="galeria/img/4.png" alt="Vuelo 2" style="width:100%; height:250px; object-fit:cover; transition: transform 0.3s;">
       </div>
 
       <!-- Video -->
@@ -1933,7 +1933,7 @@
 
       <!-- Imagen -->
       <div class="galeria-item" style="overflow:hidden; border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
-        <img src="galeria/img/6.jpeg" alt="Vuelo 2" style="width:100%; height:250px; object-fit:cover; transition: transform 0.3s;">
+        <img src="galeria/img/6.png" alt="Vuelo 2" style="width:100%; height:250px; object-fit:cover; transition: transform 0.3s;">
       </div>
 
       <!-- Video -->
@@ -2055,6 +2055,14 @@
     <input type="text" name="nombre" placeholder="Tu nombre" required style="padding:0.8rem 1rem; border-radius:12px; border:none; background:#1a1a1a; color:#fff; font-size:1rem;">
     <input type="email" name="correo" placeholder="Tu correo" required style="padding:0.8rem 1rem; border-radius:12px; border:none; background:#1a1a1a; color:#fff; font-size:1rem;">
     <textarea name="mensaje" placeholder="Tu mensaje" rows="5" required style="padding:0.8rem 1rem; border-radius:12px; border:none; background:#1a1a1a; color:#fff; font-size:1rem;"></textarea>
+
+    <!-- Checkbox de Política de Datos -->
+    <label style="display:flex; align-items:center; gap:0.5rem; font-size:0.9rem; color:#fff;">
+      <input type="checkbox" name="acepto" required style="width:16px; height:16px;">
+      Al hacer clic en "Enviar WhatsApp", declaro que he leído y acepto la 
+      <a href="documentacion/Poltica de tratamiento de datos ALAS PARA TODOS(R).pdf" target="_blank" style="color:#FF7C1D; text-decoration:underline;">Política de Tratamiento de Datos</a> de ALAS PARA TODOS®
+    </label>
+
     <button type="submit" style="background:#FF7C1D; color:#fff; padding:0.9rem 2rem; border-radius:30px; font-weight:700; transition: transform 0.3s;">
       Enviar WhatsApp
     </button>
@@ -2067,16 +2075,18 @@
   form.addEventListener('submit', function(e) {
     e.preventDefault(); // Evita que recargue la página
 
-    // Obtener valores del formulario
     const nombre = form.nombre.value.trim();
     const correo = form.correo.value.trim();
     const mensaje = form.mensaje.value.trim();
+    const acepto = form.acepto.checked;
 
-    // Crear mensaje para WhatsApp
+    if(!acepto) {
+      alert("Debes aceptar la Política de Tratamiento de Datos para continuar.");
+      return;
+    }
+
     const texto = `Hola, quiero información:%0A*Nombre:* ${nombre}%0A*Correo:* ${correo}%0A*Mensaje:* ${mensaje}`;
-
-    // Abrir WhatsApp en nueva pestaña
-    const numero = '+573106565366'; // Tu número de WhatsApp
+    const numero = '+57310656366'; // Tu número de WhatsApp
     window.open(`https://wa.me/${numero}?text=${texto}`, '_blank');
   });
 </script>
@@ -2098,13 +2108,22 @@
         <a href="https://wa.me/573106565366" target="_blank" style="color:#FF7C1D; font-size:1.5rem;"><i class="fab fa-whatsapp"></i></a>
       </div>
 
-      <!-- MAPS -->
-      <div style="margin-top:1.5rem; width:100%; height:300px; border-radius:12px; overflow:hidden; box-shadow:0 10px 20px rgba(0,0,0,0.3);">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3981.130958324688!2d-76.32565822596547!3d3.781672048940874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zM8KwNDYnNTQuMCJOIDc2wrAxOScyMy4xIlc!5e0!3m2!1ses-419!2sco!4v1765826294543!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+      <!-- MAPS + UBICACIÓN -->
+<div style="display:flex; flex-direction:column; gap:1.5rem; margin-top:1.5rem;">
+<!-- UBICACIÓN -->
+    <div style="flex:1; min-width:200px; display:flex; align-items:center; justify-content:center; color:#fff; font-size:1.2rem; font-weight:600; text-align:center;">
+      📍 Guacarí - Valle del Cauca
+    </div>
+  <div style="display:flex; flex-direction:row; gap:1.5rem; flex-wrap:wrap;">
+    <!-- MAPA -->
+    <div style="flex:1; min-width:300px; height:300px; border-radius:12px; overflow:hidden; box-shadow:0 10px 20px rgba(0,0,0,0.3);">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3981.130958324688!2d-76.32565822596547!3d3.781672048940874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zM8KwNDYnNTQuMCJOIDc2wrAxOScyMy4xIlc!5e0!3m2!1ses-419!2sco!4v1765826294543!5m2!1ses-419!2sco" 
+              width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-  </div>
+
+</div>
+
 </section>
 
 
@@ -2341,13 +2360,27 @@
 
 
 <script>
+  // Seleccionamos elementos
   const menuToggle = document.getElementById('menuToggle');
   const navLinks = document.getElementById('navLinks');
 
+  // Función para abrir/cerrar menú
   menuToggle.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
+    navLinks.classList.toggle('active'); // 'active' es la clase que muestra el menú
+  });
+
+  // Cerramos menú al hacer clic en cualquier enlace (solo en móvil)
+  const navItems = navLinks.querySelectorAll('a');
+
+  navItems.forEach(item => {
+    item.addEventListener('click', () => {
+      if (navLinks.classList.contains('active')) {
+        navLinks.classList.remove('active');
+      }
+    });
   });
 </script>
+
 
 
 
