--- a/index.html
+++ b/index.html
@@ -1752,7 +1752,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <img src="img/mix_r_l_v.png" alt="Plan Premium Cumbres y Agua" class="rounded-xl mb-4">
-    <h3>⛰️ Premium – Cumbres y Agua</h3>
+    <h3>⛰️ Legado del Valle</h3>
     <p>
       Vuelo extendido de 90 minutos o más, para entusiastas o celebraciones especiales, ofreciendo vistas completas del Valle y sus contrastes geográficos.  
       <br><strong>Puntos clave:</strong> Cordillera Central, embalse Lago Calima, paisajes impactantes.
