Acomodacion logo nav
Acomodación logo nav

--- a/index.html
+++ b/index.html
@@ -1345,7 +1345,7 @@
 <header class="navbar">
   <div class="nav-container">
     <a href="#inicio" class="logo">
-      <img src="img/logo_nav.jpg" alt="Alas Para Todos">
+      <img src="img/logo_nav_transparente.png" alt="Alas Para Todos">
       <span>ALAS PARA TODOS®</span>
     </a>
 
