--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@
   Exposiciones aéreas, convenios educativos y programas de turismo aéreo responsable para la comunidad.  
   <br><strong>Beneficios:</strong> Acceso a la aviación ,participación en eventos y actividades culturales y educativas .
 </p>
-    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20Fomento%20Aero%20Deportiva" target="_blank" class="servicio-btn">Agendar</a>
+    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20Fomento%20Aéreo%20Deportivo%20y%20Recreativo%20Certificado" target="_blank" class="servicio-btn">Agendar</a>
   </div>
 </div>
 
@@ -1744,7 +1744,7 @@
       <li><strong>Charlie – </strong> 45 a 60 minutos.
       <li><strong>Delta – </strong> Desde 60 minutos.
     </ul>
-    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20el%20Plan%20Historias%20y%20Cúpulas" target="_blank" class="servicio-btn">Agendar</a>
+    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20el%20Plan%20Ruta%20Histórica" target="_blank" class="servicio-btn">Agendar</a>
   </div>
 </div>
 
@@ -1770,7 +1770,7 @@
       <li><strong>Charlie – </strong> 45 a 60 minutos.
       <li><strong>Delta – </strong> Desde 60 minutos.
     </ul>
-    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20el%20Plan%20Premium%20Cumbres%20y%20Agua" target="_blank" class="servicio-btn">Agendar</a>
+    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20el%20Plan%20Legado%20del%20Valle" target="_blank" class="servicio-btn">Agendar</a>
   </div>
 </div>
 
@@ -1798,7 +1798,7 @@
       <li><strong>Delta – </strong> Desde 60 minutos.
     </ul>
 
-    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20el%20Plan%20Premium%20Cumbres%20y%20Agua" target="_blank" class="servicio-btn">Agendar</a>
+    <a href="https://wa.me/573106565366?text=Hola,%20quiero%20agendar%20el%20Plan%20Personalizado" target="_blank" class="servicio-btn">Agendar</a>
   </div>
 </div>
 
